# plato-a2a

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
