[package]
name = "plato-a2a"
version = "0.1.0"
edition = "2021"
description = "Agent-to-Agent (A2A) wire protocol for OpenConstruct"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
